--- a/Lesson 2 - DataStructures/Lesson2DataStructures.csproj
+++ b/Lesson 2 - DataStructures/Lesson2DataStructures.csproj
@@ -44,9 +44,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Queue.cs" />
     <Compile Include="LinkedList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
